file-xfer: do not send unnecessary 0 bytes messages

This fixes the situation when VDAgent receives 0 byte message
regarding a file-transfer operation that was terminated in the
previous message.

This makes the VDAgent to send a STATUS_ERROR after STATUS_SUCCESS to
client.

Resolves: https://bugs.freedesktop.org/show_bug.cgi?id=97227

Signed-off-by: Victor Toso <victortoso@redhat.com>
Acked-by: Jonathon Jongsma <jjongsma@redhat.com>